--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@
 *.woff filter=lfs diff=lfs merge=lfs -text
 *.woff2 filter=lfs diff=lfs merge=lfs -text
 * text=auto eol=lf
+*.zip filter=lfs diff=lfs merge=lfs -text
